fix: card word wrap and icons

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,6 +63,8 @@ h3:hover {
   padding: var(--indent);
   background-color: var(--lightgrey);
   border-radius: 0.25vw;
+  word-wrap: break-word;
+  white-space: pre-line;
 }
   .card__text {
     font-size: 0.85rem;
@@ -113,7 +115,9 @@ h3:hover {
   width: 2vw;
   text-align: center;
   font-weight: bold;
-  font-size: 0.75rem;
+  /* font-size: 0.75rem; */
+  font-size: 1rem;
+
   color: var(--darktext);
   background-color: transparent;
 }
